--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
                 <div class="profile-image">
 
-                    <img src="https://images.unsplash.com/photo-1513721032312-6a18a42c8763?w=152&h=152&fit=crop&crop=faces"
+                    <img src="profile.jpg"
                         alt="">
 
                 </div>
@@ -490,7 +490,7 @@
                         <span class="visually-hidden">Video</span><i class="fas fa-video" aria-hidden="true"></i>
                     </div>
                 </div>`
-            return div
+            return div  
         }
 
         addEventListener("load", function () {
