--- a/index.html
+++ b/index.html
@@ -400,14 +400,14 @@
 
                 <div class="profile-image">
 
-                    <img src="profile.jpg"
+                    <img src="profile.jpg" width="152"
                         alt="">
 
                 </div>
 
                 <div class="profile-user-settings">
 
-                    <h1 class="profile-user-name">janedoe_</h1>
+                    <h1 class="profile-user-name">Zivi Forsher</h1>
 
                     <button class="btn profile-edit-btn">Edit Profile</button>
 
@@ -419,16 +419,16 @@
                 <div class="profile-stats">
 
                     <ul>
-                        <li><span class="profile-stat-count">164</span> posts</li>
-                        <li><span class="profile-stat-count">188</span> followers</li>
-                        <li><span class="profile-stat-count">206</span> following</li>
+                        <li><span class="profile-stat-count">33</span> posts</li>
+                        <li><span class="profile-stat-count">7808</span> followers</li>
+                        <li><span class="profile-stat-count">45</span> following</li>
                     </ul>
 
                 </div>
 
                 <div class="profile-bio">
 
-                    <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur
+                    <p><span class="profile-real-name">Zivi Forsher</span> is a sushi, nushi, wedget
                         adipisicing elit 📷✈️🏕️</p>
 
                 </div>
