--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
                 <div class="profile-bio">
 
-                    <p><span class="profile-real-name">Zivi Forsher</span> is a sushi, nushi, wedget
+                    <p><span class="profile-real-name">Zivi</span> is a sushi, nushi, wedget
                         adipisicing elit 📷✈️🏕️</p>
 
                 </div>
