--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="כל הברכות לבת מצווה של זיוי. חברים, הורים, אחים ואחיינים!">
-    <link rel="icon" href="zivcon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="zivcon.png" type="image/png">
+    <meta property="og:image" itemprop="image" content="https://talforsher1.github.io/zivi/zivcon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"
@@ -430,8 +431,7 @@
 
                 <div class="profile-bio">
 
-                    <p><span class="profile-real-name">Zivi</span> is a sushi, nushi, wedget
-                        adipisicing elit 📷✈️🏕️</p>
+                    <p>I'm a <span class="profile-real-name">Zivi</span>, sushi, nushi, wedget 📷✈️🏕️</p>
 
                 </div>
 
