--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="כל הברכות לבת מצווה של זיוי. חברים, הורים, אחים ואחיינים!">
     <link rel="icon" href="zivcon.png" type="image/png">
     <meta property="og:image" itemprop="image" content="https://talforsher1.github.io/zivi/zivcon.png">
+    <meta property="og:image:secure_url" itemprop="image" content="https://talforsher1.github.io/zivi/zivcon.png">
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"
