--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     </main>
     <script>
         const gallery = document.querySelector(".gallery")
-
+        var i = 0;
         const list = [
             "177b92c33d86fd611800dfb2f8775c1f",
             "8ccc80210ad6ac1a7f7f40d60b66661a",
@@ -488,7 +488,7 @@
             const div = document.createElement("div")
             div.innerHTML =
                 `<div class="gallery-item" tabindex="0">
-                    <div style="position: relative; padding-top: 100%;"><iframe src=
+                    <div style="position: relative; padding-top: 100%;"><iframe onload="appendEL()" src=
                         "https://iframe.videodelivery.net/${streamURL}?loop=true"
                          style="border: none; position: absolute; top: 0; height: 100%; width: 100%;"  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe></div>
                     <div class="gallery-item-type">
@@ -498,13 +498,13 @@
             return div
         }
 
-        addEventListener("load", function () {
-            list.forEach((el,index) =>
-                setTimeout(function () {
-                    gallery.append(element(el))
-                }, index * 1500)
-            )
-        })
+        addEventListener("load", appendEL())
+
+        function appendEL(){
+            if (i<list.length)
+                gallery.append(element(list[i]))
+            i++
+        }
     </script>
 
 
