--- a/index.html
+++ b/index.html
@@ -226,13 +226,9 @@
         /* Loader */
 
         .loader {
-            width: 5rem;
-            height: 5rem;
-            border: 0.6rem solid #999;
-            border-bottom-color: transparent;
-            border-radius: 50%;
-            margin: 0 auto;
-            animation: loader 500ms linear infinite;
+            width: 50%;
+            margin: auto;
+            text-align: center;
         }
 
         /* Media Query */
@@ -314,14 +310,6 @@
 
             .profile-stat-count {
                 display: block;
-            }
-        }
-
-        /* Spinner Animation */
-
-        @keyframes loader {
-            to {
-                transform: rotate(360deg);
             }
         }
 
@@ -453,7 +441,9 @@
             </div>
             <!-- End of gallery -->
 
-            <div class="loader"></div>
+            <div class="loader">
+                <h1>load more</h1>
+            </div>
 
         </div>
         <!-- End of container -->
@@ -488,7 +478,7 @@
             const div = document.createElement("div")
             div.innerHTML =
                 `<div class="gallery-item" tabindex="0">
-                    <div style="position: relative; padding-top: 100%;"><iframe onload="appendEL()" src=
+                    <div style="position: relative; padding-top: 100%;"><iframe src=
                         "https://iframe.videodelivery.net/${streamURL}?loop=true"
                          style="border: none; position: absolute; top: 0; height: 100%; width: 100%;"  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe></div>
                     <div class="gallery-item-type">
@@ -498,12 +488,28 @@
             return div
         }
 
-        addEventListener("load", appendEL())
+        addEventListener("load", () => {
+            for (var count = 0; count < 3; count++) appendEL()
+        })
 
-        function appendEL(){
-            if (i<list.length)
+        function appendEL() {
+            if (i < list.length)
                 gallery.append(element(list[i]))
             i++
+        }
+
+        document.onscroll = function () {
+            var pos = getVerticalScrollPercentage(document.body)
+            console.log(pos)
+            if (pos > 90)
+                appendEL()
+        };
+
+        function getVerticalScrollPercentage(elm) {
+            var p = elm.parentNode,
+                pos = (elm.scrollTop || p.scrollTop) / (p.scrollHeight - p.clientHeight) * 100
+
+            return pos
         }
     </script>
 
