append after load

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
                     <ul>
                         <li><span class="profile-stat-count">33</span> posts</li>
-                        <li><span class="profile-stat-count">7808</span> followers</li>
+                        <li><span class="profile-stat-count">77,808</span> followers</li>
                         <li><span class="profile-stat-count">45</span> following</li>
                     </ul>
 
@@ -506,7 +506,7 @@
                 i++
                 newFrame.addEventListener("load", function(){
                     newFrame.classList = ""
-                    appendEL()
+                    setTimeout(function(){appendEL()},300)
                 })
             }
             
