more videos from Miky

--- a/index.html
+++ b/index.html
@@ -477,7 +477,38 @@
             "34a446f367ffd5a0ac6bae19a955750d",
             "3773a0ea02956a0212910f7ca6610964",
             "c92577877b6c2e6dc11b748181461e74",
-            "6e44b4bbb650402b6387da8ecc0ec116"
+            "6e44b4bbb650402b6387da8ecc0ec116",
+            "c0ba9176f0f1e6ac74b18a9a4ea0b4ea",
+            "624d78742cefcc1491aaf9c385dbc02e",
+            "8eb6e6a93710c2d45455896b8ed73b7a",
+            "762186130ebfc2013776b57564400662",
+            "fac779955334683a1a101cfac200a472",
+            "5c76f769a9055424e025b8c98fd388dc",
+            "8862318ddeae1b47a234cc2847781b79",
+            "8b39de09f27544edea50f956f4340a43",
+            "97668177bead867098f1fd3528351639",
+            "307b40c66810ce71baa663995a0b99f2",
+            "f20f846338957afc77eecf5b472ebee5",
+            "da1fcc699c7f8df539ebed01abcf90d8",
+            "4def1be574acd9586c7625b71213084f",
+            "2a4f06aa617b00f2581e8d9f15f5a15e",
+            "ff5360e130b7d2e4c7d15509b5fbb911",
+            "fee4a3c3594173fd7b3314ffdcdd3fcd",
+            "96752a666a9218b8fc209967c71bf895",
+            "6dcdbfc8d5052c9ad75bb52aad052f8d",
+            "a8b57e7c0866d640709f62b4aea5e14e",
+            "6a0c2578fd741f21e258c3a3399f3573",
+            "3376fdda95820ea0efa5b1b59cd26ef5",
+            "487e33adad98d8ad75423b0b54e5f315",
+            "61ffe5f1e1f572e18a58264f699d6dd7",
+            "6d4dbcd64cfa338f6994bf8ccdb3d560",
+            "2c50a237c9d34c83dd443dfcbeff1e5c",
+            "fcdcb2f7738a76ed7a56a05bbb564cd4",
+            "97abe1a23fccecadbb5c0eb69a08bc2f",
+            "8b51cab3ca797d104afebaea7b1d9274",
+            "48688beb716b3786165f01b878595126",
+            "a16a378f3c7fec49edc08f6a3028e734",
+            "d6341738761a0b0bbb9b93cf510853ae"
         ]
 
         function element() {
@@ -508,6 +539,9 @@
                     newFrame.classList = ""
                     setTimeout(function(){appendEL()},100)
                 })
+            }
+            else{
+                document.getElementsByClassName("loader")[0].style.display = "none"
             }
             
         }
