--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                 var newElement = element()
                 gallery.append(newElement)
                 var newFrame = document.getElementsByClassName("frame")[0]
-                newFrame.src = `https://iframe.videodelivery.net/${list[i]}?loop=true`
+                newFrame.src = `https://iframe.videodelivery.net/${list[i]}?preload=true`
                 i++
                 newFrame.addEventListener("load", function(){
                     newFrame.classList = ""
