--- a/index.html
+++ b/index.html
@@ -535,12 +535,12 @@
                 gallery.append(newElement)
                 var newFrame = document.getElementsByClassName("frame")[0]
                 newFrame.src =
-                    `https://iframe.videodelivery.net/${list[i]}?preload=true&muted=true&autoplay=true&controls=false`
+                    `https://iframe.videodelivery.net/${list[i]}?preload=true&muted=true&autoplay=true&controls=false&loop=true`
                 i++
                 newFrame.addEventListener("load", function () {
                     const player = Stream(newFrame)
                     newFrame.addEventListener('click', () => {
-                        player.pause()
+                        player.muted = !player.muted
                     })
                     newFrame.classList = ""
                     setTimeout(function () {
